# emf

./: .gitignore  Cargo.toml  README.md
agent/: Cargo.toml  Makefile  README.md
agent/assets/: emf_contract.metadata.json  emf_contract.metadata.scale
agent/migrations/: 20240207111257_init.sql  20240207111258_init.sql
agent/src/: contract.rs  emf_contract.rs  indexer.rs  main.rs  storage.rs
agent/tests/: http_api.rs  tests.rs
docs/: Makefile  cell-company-initialization.md  cell-tower-creation.md  connect-wallet.md  flow.puml  how-to-use-map.md  issue-certificate.md
emf-ui/: .prettierignore  Makefile  README.md  bun.lockb  eslint.config.js  index.html  package.json  run.sh  vite.config.js
emf-ui/src/: App.vue  signer-extension.js  smart-contract.js
emf-ui/src/assets/: emf_contract.metadata.json  main.css
emf-ui/src/router/: index.js
emf-ui/src/views/: EntitiesView.vue  MapView.vue
emf_contract/: Cargo.toml  Makefile  README.md  lib.rs
openapi/: indexer.openapi.yaml
