[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "0.4.21", features = [], default-features = false }
env_logger = { version = "0.11.3", features = ["auto-color", "humantime"], default-features = false }
tokio = { version = "1.37.0", features = ["macros", "io-util", "rt-multi-thread", "sync", "signal", "time", "net"], default-features = false }
serde = { version = "1.0.200", features = [], default-features = false }
serde_json = { version = "1.0.116", features = [], default-features = false }
subxt = { version = "0.35.3", features = ["substrate-compat"], default-features = true }
subxt-signer = { version = "0.35.3", features = [], default-features = true }
contract-transcode = { version = "4.1.1", features = [], default-features = false }
scale = { package = "parity-scale-codec", version = "3.6.9", features = ["derive"], default-features = false }
pallet-contracts-primitives = { version = "29.0.0", features = [], default-features = true }
axum = { version = "0.7.5", features = [], default-features = true }
sqlx = { version = "0.7.4", features = ["sqlite", "migrate", "macros"], default-features = false }
serde_qs = { version = "0.13.0", features = [], default-features = false }

[dev-dependencies]
tokio = { version = "1.37.0", features = ["process"], default-features = false }
rand = { version = "0.8.5", features = [], default-features = true }
reqwest = { version = "0.12.4", features = ["json"], default-features = false }
