[package]
name = "emf_contract"
version = "0.1.0"
edition = "2021"

[dependencies]
ink = { version = "5.0.0", features = [], default-features = false }
ink_env = { version = "5.0.0", features = [], default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
  "ink/std",
]
ink-as-dependency = []
e2e-tests = []
